--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        <header>Israel's portfolio</header>
+    </head>
+    <body></body>
+    <footer></footer>
 </html>
