-added css styling -moved expertise from bottom to top

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,32 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Israel de la Cruz - Resume</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px;
-      background-color: #f5f5f5;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: white;
-      padding: 30px;
-      border-radius: 8px;
-    }
-    h1, h2 {
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 5px;
-    }
-    .section {
-      margin-bottom: 20px;
-    }
-    ul {
-      list-style-type: disc;
-      padding-left: 20px;
-    }
-  </style>
+
+  <link rel="stylesheet" type="text/css" href="portfolio.css">
 </head>
 <body>
   <div class="container">
@@ -45,52 +21,63 @@
       <p>Competent and reliable person looking for opportunities to gain some valuable work experience within the company. Strong communication skills, ability to perform under pressure, quick thinking and solve problems creatively.</p>
     </div>
 
+        <div class="expertise">
+      <h2>Expertise</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Python</li>
+        <li>SQL</li>
+      </ul>
+    </div>
+
     <div class="section">
       <h2>Work Experience</h2>
-      <h3>Outplex - Chat Representative (2021 – 2022)</h3>
-      <ul>
-        <li>Served customers by chat for Optimum.</li>
-        <li>Answered questions about bills and services.</li>
-        <li>Changed account information or diagnosed and fixed services.</li>
-      </ul>
+      <div class="xp">
+            <div>
+                <h3>Outplex - Chat Representative (2021 – 2022)</h3>
+                <ul>
+                    <li>Served customers by chat for Optimum.</li>
+                    <li>Answered questions about bills and services.</li>
+                    <li>Changed account information or diagnosed and fixed services.</li>
+                </ul>
+            </div>
 
-      <h3>Outplex - Chat Representative (2022)</h3>
-      <ul>
-        <li>Served customers by chat for NYT.</li>
-        <li>Worked as a retention agent solving issues clients had with services such as price and troubleshooting.</li>
-      </ul>
+            <div>
+                <h3>Outplex - Chat Representative (2022)</h3>
+                <ul>
+                    <li>Served customers by chat for NYT.</li>
+                    <li>Worked as a retention agent solving issues clients had with services such as price and troubleshooting.</li>
+                </ul>
+            </div>
 
-      <h3>Outplex - Subject Matter Expert (2022 – 2024)</h3>
-      <ul>
-        <li>Assisted advocates with questions and issues about the product.</li>
-        <li>Spoke with customers asking for a supervisor.</li>
-        <li>Coached and guided advocates to improve performance based on KPI.</li>
-      </ul>
+            <div>
+                <h3>Outplex - Subject Matter Expert (2022 – 2024)</h3>
+                <ul>
+                    <li>Assisted advocates with questions and issues about the product.</li>
+                    <li>Spoke with customers asking for a supervisor.</li>
+                    <li>Coached and guided advocates to improve performance based on KPI.</li>
+                </ul>
+            </div>
 
-      <h3>Broadway - Email Specialist (2024)</h3>
-      <ul>
-        <li>Helped clients become debt free with NDR.</li>
-        <li>Communicated with clients across the USA to manage, negotiate, and solve debts.</li>
-        <li>Analyzed income, hardships, and guided them through negotiation with debtors.</li>
-      </ul>
+            <div>
+                <h3>Broadway - Email Specialist (2024)</h3>
+                <ul>
+                    <li>Helped clients become debt free with NDR.</li>
+                    <li>Communicated with clients across the USA to manage, negotiate, and solve debts.</li>
+                    <li>Analyzed income, hardships, and guided them through negotiation with debtors.</li>
+                </ul>
+            </div>
+        </div>
     </div>
 
     <div class="section">
       <h2>Education</h2>
-      <p><strong>Colegio San Judas Tadeo</strong></p>
+      <p><strong>Colegio San Judas Tadeo</strong> (2018)</p>
       <p><strong>INTEC</strong> - Software Engineer (2018 – 2020)</p>
     </div>
 
-    <div class="section">
-      <h2>Expertise</h2>
-      <ul>
-        <li>Video Editing</li>
-        <li>SQL</li>
-        <li>PHP</li>
-        <li>Python</li>
-        <li>Customer Service</li>
-      </ul>
-    </div>
 
     <div class="section">
       <h2>Languages</h2>
@@ -100,13 +87,6 @@
       </ul>
     </div>
 
-    <div class="section">
-      <h2>References</h2>
-      <p><strong>Edwin Barry</strong><br>
-      Project Manager, Outplex<br>
-      Phone: +1 (829) 639-0113<br>
-      Email: edwin.barry@outplex.com</p>
-    </div>
   </div>
 </body>
 </html>
